@startuml ProyectoPedidos
' --- STYLE START ---
skinparam backgroundColor white
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
    AttributeIconSize 0
}
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 14
' --- STYLE END ---

abstract class Product {
  -name: String
  -price: float
  --
  +Product(name: String, price: float)
  +getName(): String
  +getPrice(): float
  +setName(name: String): void
  +setPrice(price: float): void
  +toString(): String
  +calcPrice(): float
}

class PhysicalProd {
  -deliveryFee: float
  --
  +PhysicalProd(name: String, price: float, deliveryFee: float)
  +getDeliveryFee(): float
  +setDeliveryFee(deliveryFee: float): void
  +toString(): String
  +calcPrice(): float
}

class DigitalProd {
  -license: String
  -sizeInMb: float
  --
  +DigitalProd(name: String, price: float, license: String, sizeInMb: float)
  +getLicense(): String
  +getSizeInMb(): float
  +setLicense(license: String): void
  +setSizeInMb(sizeInMb: float): void
  +toString(): String
  +calcPrice(): float
}

class Client {
  -name: String
  -mail: String
  -address: String
  --
  +Client(name: String, mail: String, address: String)
  +getName(): String
  +getMail(): String
  +getAddress(): String
  +setName(name: String): void
  +setMail(mail: String): void
  +setAddress(address: String): void
  +toString(): String
}

class Order {
  -client: Client
  -products: List<Product>
  --
  +Order(client: Client)
  +Order(client: Client, products: List<Product>)
  +addProduct(productToAdd: Product): void
  +calcTotal(): float
  +showSummary(): String
}

class Main {
  +{static} main(args: String[]): void
}

Product <|-- PhysicalProd
Product <|-- DigitalProd
Order -- Client
Order o-- Product

@enduml